Changed page title

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Dylan Hand – Independent Product Designer
+title: Dylan Hand
 logo: # you can add own logo.
 description: Homepage of Dylan Hand.
 # baseurl: "/derrick" # the subpath of your site, e.g. /blog
