--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Dylan Hand
+subtitle: apps & raps
 logo: # you can add own logo.
 description: Homepage of Dylan Hand.
 # baseurl: "/derrick" # the subpath of your site, e.g. /blog
