--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author:
   image: '/assets/img/dylanrap.jpg'
   job: Apps & Raps
   bio: Passionate designer curating designs for new startups  and  founders  and crafts  beautiful user interfaces with love.
-  email: forexample@website.com
+  email: dylan.hand@gmail.com
 
 
 # Contact links
