Style author section
Style now matches new design

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author:
   name: Dylan Hand
   tagline: apps & raps
   image: '/assets/img/dylanrap.jpg'
-  bio: Passionate designer curating designs for new startups  and  founders  and crafts  beautiful user interfaces with love.
+  bio: Software engineer and rapper from Oregon living in Gothenburg.
   email: dylan.hand@gmail.com
 
 
