Temporarily remove analytics

--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ disqus-identifier: # mr-brown # add your shortname for Disqus Comment. For examp
 
 
 # Google Analytics
-google-analytics: UA-98310496-1 # add your identifier. For example UA-99631805-1.
+google-analytics: # UA-98310496-1 # add your identifier. For example UA-99631805-1.
 
 
 # Build settings
