Use image thumbnails for posts
This commit:
- Adds a script for generating thumbnails of all images in the assets/img directory
- Uses these images in index.html when showing posts, to speed up loading time
- Attempts to add thumbnail generation to the `rake deploy` pipeline

--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ disqus-identifier: # mr-brown # add your shortname for Disqus Comment. For examp
 google-analytics: UA-98310496-1 # add your identifier. For example UA-99631805-1.
 
 images-path: /assets/img/
+thumbnails-path: /assets/img/thumbs/
 
 # Build settings
 markdown: kramdown
