source branch - Remove LinkeddIn icon

--- a/_config.yml
+++ b/_config.yml
@@ -32,9 +32,9 @@ contact:
   - name: Facebook
     link: https://facebook.com/dylan.hand
     icon: facebook
-  - name: LinkedIn
-    link: https://linkedin.com/in/dylanhand
-    icon: linkedin2
+  # - name: LinkedIn
+    # link: https://linkedin.com/in/dylanhand
+    # icon: linkedin2
 
 
 # Comment Section (Disqus)
