become only a rapper

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author:
   name: Dylan Hand
   tagline: apps & raps
   image: '/assets/img/dylanrap.jpg'
-  bio: Software engineer and rapper from Oregon living in Gothenburg.
+  bio: Rapper from Oregon living in Gothenburg.
   email: dylan.hand@gmail.com
 
 
