Update YouTube link

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ contact:
     link: https://soundcloud.com/dylanhand
     icon: soundcloud
   - name: YouTube
-    link: https://youtube.com/dylanhand
+    link: https://www.youtube.com/channel/UCc5OZ-O78NcvLi2XVWf6KpA
     icon: youtube
   - name: Facebook
     link: https://facebook.com/dylan.hand
