source branch - Add back Fly High presave link

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author:
   name: Dylan Hand
   tagline: apps & raps
   image: '/assets/img/profile-pic.jpg'
-  bio: New single coming May 2021.
+  bio: Pre-save the new single "Fly High" <a href="https://distrokid.com/hyperfollow/dylanhand/fly-high">here.</a>
   email: dylan.hand@gmail.com
 
 
