--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author:
   name: Dylan Hand
   tagline: apps & raps
   image: '/assets/img/profile-pic.jpg'
-  bio: Listen to the new single "Letter to Ashland" <a href="https://songwhip.com/dylanhand/letter-to-ashland">here.</a>
+  bio: Listen to the new single <a href="https://songwhip.com/dylanhand/letter-to-ashland">"Letter to Ashland"</a>
   email: dylan.hand@gmail.com
 
 
